ReSharper.FSharp/test/data/parsing/errors/Expr - List - Comprehension 01 - ForExpr.fs
[ for a = 1 to 10 -> a ]
